<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_record">

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.healthx.ui.fragment.RecordFragment"
        android:label="@string/tab_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.healthx.ui.fragment.AnalysisFragment"
        android:label="@string/tab_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.healthx.ui.fragment.ProfileFragment"
        android:label="@string/tab_profile"
        tools:layout="@layout/fragment_profile" />
        
    <fragment
        android:id="@+id/sleepFragment"
        android:name="com.healthx.ui.fragment.SleepFragment"
        android:label="睡眠记录"
        tools:layout="@layout/fragment_sleep">
        <action
            android:id="@+id/action_sleepFragment_to_sleepDetailFragment"
            app:destination="@id/sleepDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    
    <fragment
        android:id="@+id/sleepDetailFragment"
        android:name="com.healthx.ui.fragment.SleepDetailFragment"
        android:label="睡眠详情"
        tools:layout="@layout/fragment_sleep_detail" />

    <fragment
        android:id="@+id/navigation_weight"
        android:name="com.healthx.ui.weight.WeightFragment"
        android:label="@string/weight_management"
        tools:layout="@layout/fragment_weight" />
</navigation> 